--- a/src/assets/styles/cmps/_loading-circle.scss
+++ b/src/assets/styles/cmps/_loading-circle.scss
@@ -1,5 +1,5 @@
 .loading-circle-container{
-    position: absolute;
+    position: fixed;
     transform: translate(-50%, -50%); 
     z-index: 20;
     left: 50%;
@@ -12,12 +12,5 @@
         animation: spin 10s linear infinite;
     }
     
-    @keyframes spin {
-        0% {
-            transform: rotate(0deg);
-        }
-        100% {
-            transform: rotate(360deg);
-        }
-    }
+
 }
