--- a/src/assets/styles/cmps/_partic-amount-input.scss
+++ b/src/assets/styles/cmps/_partic-amount-input.scss
@@ -2,6 +2,9 @@
     gap: 16px;
     border-radius: 2rem;
     border:1px solid $clr8;
+    background-color: $clr9;
+    box-shadow: $shadow1;
+    color: $clr1;
     
     button{
         background-color: none;
