--- a/src/assets/styles/setup/_functions.scss
+++ b/src/assets/styles/setup/_functions.scss
@@ -8,3 +8,7 @@
 @function em($pixels, $context: 16px) {
     @return calc(($pixels/$context) * 1em);
 }
+
+@function randomPercentage() {
+    @return random(100) + '%';
+  }
