--- a/src/assets/styles/views/_location-details.scss
+++ b/src/assets/styles/views/_location-details.scss
@@ -1,7 +1,7 @@
 .location-details {
 
     .location {
-        margin-top: 75px;
+        margin-top: 150px;
         gap: 30px;
         flex-direction: column;
 
@@ -19,7 +19,7 @@
         @include for-midium-layout {
             width: 50%;
         }
-        
+
         @include for-normal-layout {
             flex-direction: row;
             align-items: flex-end;
@@ -30,10 +30,14 @@
             overflow: hidden;
             display: grid;
             grid-template-rows: 1fr 1fr 1fr;
-            flex-basis: 80%;
+            width: 100%;
 
+            @include for-narrow-layout {
+                width: 80%;
+            }
             @include for-midium-layout {
                 max-height: 850px;
+                width: 100%;
             }
 
             img {
@@ -41,36 +45,44 @@
                 height: 350px;
                 transition: 0.3s;
                 @include background-img;
+                width: 100%;
 
                 @include for-midium-layout {
                     height: 850px;
                 }
+
             }
         }
 
-        .carousel-paging {        
+        .carousel-paging {
             gap: 4px;
+            width: 100%;
 
+            @include for-mobile-layout {
+                width: auto;
+            }
+        
             @include for-normal-layout {
                 flex-direction: column;
                 justify-content: flex-end;
             }
 
             img {
-                width: 100px;
+                width: 32.5%;
                 height: 80px;
 
-                @include for-normal-layout {
+                @include for-mobile-layout {
                     width: 120px;
                     height: 100px;
                 }
+
             }
         }
     }
 
     .location-info {
-        width: 100%;    
-        margin: 0 auto; 
+        width: 100%;
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
         gap: 30px;
@@ -78,11 +90,11 @@
         text-align: center;
 
         @include for-mobile-layout {
-            width: 80%;   
+            width: 80%;
         }
 
         @include for-midium-layout {
-            width: 50%;     
+            width: 50%;
         }
 
         @include for-wide-layout {
@@ -90,7 +102,7 @@
             font-size: 1.2rem;
         }
 
-        h2{
+        h2 {
             position: absolute;
             white-space: nowrap;
             top: 100px;
@@ -133,7 +145,7 @@
         .info-list {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            
+
             p {
                 font-size: 1.25rem;
                 padding: 2rem 0;
@@ -166,7 +178,7 @@
             position: relative;
 
             @include for-mobile-layout {
-                width: 350px; 
+                width: 350px;
             }
 
             h3 {
@@ -176,7 +188,7 @@
             }
 
             .select-date-error {
-                color: rgb(238, 66, 66);
+                color: $clr10;
                 position: absolute;
                 top: 115px;
                 font-size: 0.75rem;
