--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import "views/location-index";
 @import "views/location-details";
 @import "views/add-location";
+@import "views/prize-index";
 
 // Components
 @import "cmps/app-header";
@@ -40,6 +41,7 @@
 @import "cmps/google-map";
 @import "cmps/no-loc-modal";
 @import "cmps/loading-circle";
+@import "cmps/prize-preview";
 
 
 
