--- a/src/assets/styles/cmps/_guide.scss
+++ b/src/assets/styles/cmps/_guide.scss
@@ -11,6 +11,7 @@
 
         h2 {
             font-size: 3rem;
+            padding-bottom: 75px;
         }
     }
 
@@ -23,7 +24,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-
+        
         @include for-midium-layout {
             bottom: 120px;
         }
