--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -1,53 +1,52 @@
 .home-page {
     color: $clr2;
-    
-    // cursor: url(../../img/butterfly-cursor.gif),auto !important;
-    // cursor: url(../../img/butterfly-cursor.gif),auto;
 
-    .butterfly{
+    .butterfly {
         width: 100px;
         height: 100px;
         background: url(../../img/butterfly-cursor.gif) no-repeat;
+        mix-blend-mode: screen;
         background-size: contain;
-        // position: fixed;
-        // pointer-events: none;
         position: absolute;
         bottom: -50px;
-        left: 250px;
+        left: -100px;
         animation: moveBackAndForth 25s infinite;
         transition: 2.5s;
-      }
-      .birds{
+        z-index: 4;
+    }
+
+    .birds {
         width: 400px;
-        height: 400px;
-        background: url(../../img/birds.gif) no-repeat;
-        mix-blend-mode: screen;    
+        height: 300px;
+        background: url(../../img/birds2.gif) no-repeat;
+        mix-blend-mode: screen;
+        
         background-size: contain;
         position: absolute;
-        top: 70px;
+        top: 80px;
         gap: 10px;
         z-index: 2;
         right: 0;
-        animation: moveImage 35s linear infinite;
-       
-       
+        animation: moveImage 20s linear infinite;
+
         @include for-mobile-layout {
-           top: 100px;
+            top: 100px;
         }
 
         @include for-narrow-layout {
             top: 170px;
         }
+
         @include for-normal-layout {
-            top: 210px;
+            top: 200px;
         }
-      }
-    
+    }
+
     .app-header {
         position: fixed;
         top: 0;
         background: none;
-        z-index: 10;
+        z-index: 999;
     }
 
     .hero {
@@ -57,12 +56,12 @@
         width: 100vw;
         height: 100vh;
         @include background-img;
-       
+
 
         .hero-info {
             margin-top: 120px;
             gap: 10px;
-            z-index: 2;
+            z-index: 3;
 
             @include for-mobile-layout {
                 gap: 30px;
@@ -72,11 +71,12 @@
             @include for-narrow-layout {
                 margin-top: 200px;
             }
+
             @include for-normal-layout {
                 margin-top: 240px;
             }
         }
-     
+
         .hero-btn {
             width: 200px;
             height: 40px;
@@ -87,9 +87,13 @@
             font-size: 1rem;
             margin-bottom: 40px;
             transition: 0.3s;
+            overflow: hidden;
+            position: relative;
+            z-index: 3;
 
             &:hover {
                 background-color: darken($color: $clr3, $amount: 20);
+                box-shadow: $shadow1;
             }
 
             @include for-mobile-layout {
@@ -109,10 +113,27 @@
                 width: 400px;
                 height: 80px;
             }
+
+            &::before {
+                content: '';
+                position: absolute;
+                height: 100px;
+                width: 15px;
+                background: #f3f3f3;
+                box-shadow: 0 0 10px #fff;
+                filter: blur(1px);
+                opacity: 0.9;
+                top: -30px;
+                left: 0px;
+                transition: 0.7s;
+                animation: shine-btn-animation 8s infinite;
+            }
+
         }
 
         h1 {
             font-size: 2rem;
+            z-index: 1;
 
             @include for-mobile-layout {
                 font-size: 2.5rem;
@@ -134,12 +155,13 @@
         background-color: $bgclr1;
         padding: 100px 24px;
         width: 100vw;
-        gap: 30px;
-        
+        gap: 60px;
+
         flex-direction: column-reverse;
 
         @include for-narrow-layout {
             flex-direction: row;
+            gap: 30px;
         }
 
         @include for-normal-layout {
@@ -169,7 +191,7 @@
         .about-info {
             flex-basis: 50%;
             padding: 0;
-            font-size: 1rem;    
+            font-size: 1rem;
             gap: 0.5rem;
 
             @include for-mobile-layout {
