--- a/src/assets/styles/views/_location-details.scss
+++ b/src/assets/styles/views/_location-details.scss
@@ -1,4 +1,33 @@
 .location-details {
+    position: relative;
+
+    .app-header {
+        background-color: $clr2;
+        border-bottom: 2px solid $clr9 ;
+        color: $bgclr1;
+
+        @include for-narrow-layout {
+            background-color: $clr1;
+            color: $clr2;
+            border-bottom: none;
+        }
+
+        .go-back {
+            padding-top: 12px;
+            font-size: 1.75rem;
+            padding-left: 15px;
+            @include for-narrow-layout {
+                display: none;
+            }
+        }
+
+        .logo {
+            display: none;
+            @include for-narrow-layout {
+                display: block;
+            }
+        }
+    }
 
     .location {
         margin-top: 150px;
@@ -15,6 +44,15 @@
         gap: 8px;
         flex-direction: column;
         align-items: center;
+        margin: 0 auto;
+        width: 100vw;
+        position: absolute;
+        left: 0;
+
+        @include for-narrow-layout {
+            width: 100%;
+            position: static;
+        }
 
         @include for-midium-layout {
             width: 50%;
@@ -28,13 +66,16 @@
         .gatheringImgs {
             max-height: 350px;
             overflow: hidden;
+            // overflow-y: scroll;
             display: grid;
             grid-template-rows: 1fr 1fr 1fr;
             width: 100%;
 
+
             @include for-narrow-layout {
                 width: 80%;
             }
+
             @include for-midium-layout {
                 max-height: 850px;
                 width: 100%;
@@ -47,6 +88,7 @@
                 @include background-img;
                 width: 100%;
 
+
                 @include for-midium-layout {
                     height: 850px;
                 }
@@ -55,13 +97,18 @@
         }
 
         .carousel-paging {
-            gap: 4px;
+            gap: 8px;
+            padding: 0 1.5rem;
             width: 100%;
 
             @include for-mobile-layout {
                 width: auto;
             }
-        
+
+            @include for-narrow-layout {
+                padding: 0;
+            }
+
             @include for-normal-layout {
                 flex-direction: column;
                 justify-content: flex-end;
@@ -82,7 +129,7 @@
 
     .location-info {
         width: 100%;
-        margin: 0 auto;
+        margin: 475px auto 0;
         display: flex;
         flex-direction: column;
         gap: 30px;
@@ -91,6 +138,10 @@
 
         @include for-mobile-layout {
             width: 80%;
+        }
+
+        @include for-narrow-layout {
+            margin: 0 auto;
         }
 
         @include for-midium-layout {
@@ -107,6 +158,7 @@
             white-space: nowrap;
             top: 100px;
             left: 50%;
+            font-weight: lighter;
             transform: translateX(-50%);
 
             @include for-midium-layout {
@@ -150,7 +202,6 @@
                 font-size: 1.25rem;
                 padding: 2rem 0;
                 position: relative;
-                text-align: left;
 
                 svg {
                     position: absolute;
