--- a/src/assets/styles/cmps/_partic-amount-input.scss
+++ b/src/assets/styles/cmps/_partic-amount-input.scss
@@ -1,5 +1,5 @@
 .participants-amount{
-    gap: 16px;
+    gap: 1rem;
     border-radius: 2rem;
     border:1px solid $clr8;
     background-color: $clr9;
