--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,13 +7,15 @@ $clr7: #f15b85;
 $clr8: lightgrey;
 $clr9: #e6e6e6;
 $clr10: #FF3333;
-
-
+$clr11: teal;
+$clr12:#111010;
 $clr5: #003AD2;
 $clr6: #dff0ea;
 $bgclr1: #000330;
 $bgclr2: #4B44B8;
 $shadow1: 0px 4px 14px 0px rgba(72, 72, 72, 0.4);
+$border1:2px solid $clr9;
+
 
 
 // Breakpoints
