--- a/src/assets/styles/cmps/_side-bar.scss
+++ b/src/assets/styles/cmps/_side-bar.scss
@@ -9,7 +9,7 @@
     padding:0 20px ;
     text-align: start;
     transition: 0.7s;
-    
+    padding: 1rem;
     &.open{
         transform: translateX(-300px);
         opacity: 1;
