--- a/src/assets/styles/views/_add-location.scss
+++ b/src/assets/styles/views/_add-location.scss
@@ -125,7 +125,7 @@
           padding: 0 ;
           margin:0.5rem 0;
           border-radius: 0.5rem;
-          border: 2px solid $clr9;
+          border: $border1;
          
           @include for-midium-layout {
              top: 35px; 
