--- a/src/assets/styles/views/_login-signup-page.scss
+++ b/src/assets/styles/views/_login-signup-page.scss
@@ -14,24 +14,30 @@
     .log-cont {
         background-color: $clr2;
         position: absolute;
-        top: 150px;
+        top: 90px;
         padding: 10px;
         left: 50%;
         transform: translateX(-50%);
+        width: 100%;
 
         @include for-mobile-layout {
             width: 460px;
+            top: 150px;
             border-radius: 8px;
             box-shadow: $shadow1 ;
         }
     }
 
     .login-logo {
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        margin: 0 auto;
-        display: block;
+        display: none;
+
+        @include for-mobile-layout {
+            display: block;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            margin: 0 auto;
+        }
     }
 
 
