added user profile menu

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -42,6 +42,7 @@
 @import "cmps/no-loc-modal";
 @import "cmps/loading-circle";
 @import "cmps/prize-preview";
+@import "cmps/user-profile-modal";
 
 
 
