--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -13,7 +13,7 @@
         margin: 100px 0;
         padding: 2rem;
         background-color: $clr12;
-
+        
         .profile-img {
             width: 200px;
             height: 200px;
@@ -47,6 +47,13 @@
             font-size: 1.5rem;
             margin-bottom: 2rem;
             color: $clr11;
+            padding-left: 1rem;
+        }
+
+        .no-actions{
+            background-color: $clr12;
+            height: 500px;
+            padding:2rem 1rem;
         }
     }
 
@@ -83,5 +90,11 @@
 
     .more-options {
         width: 30%;
+        div{
+            gap: 2.5rem;
+            background-color: $clr12;
+            color: $clr11;
+            padding: 2rem 1rem;
+        }
     }
 }
