finished user profile

--- a/src/assets/styles/cmps/_location-filter.scss
+++ b/src/assets/styles/cmps/_location-filter.scss
@@ -130,8 +130,8 @@
 
     .action-btns-cont {
         position: absolute;
-        right: 16px;
-        bottom: 25px;
+        right: 1rem;
+        bottom: 1rem;
 
         button {
             width: 70px;
