--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -20,7 +20,6 @@
         height: 300px;
         background: url(../../img/birds2.gif) no-repeat;
         mix-blend-mode: screen;
-        
         background-size: contain;
         position: absolute;
         top: 80px;
@@ -193,6 +192,11 @@
             padding: 0;
             font-size: 1rem;
             gap: 0.5rem;
+
+            span{
+                color: $clr1;
+                font-weight: bold;
+            }
 
             @include for-mobile-layout {
                 width: 80vw;
