--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -1,5 +1,5 @@
 .user-details {
-
+    padding-bottom: 250px;
     background-image: url(../../img/formbg1.jpg);
     @include background-img;
     color: $clr2;
@@ -10,20 +10,46 @@
     }
 
     .user-details-header {
-        margin: 100px 0;
+        margin: 100px 0 50px;
         padding: 2rem;
         background-color: $clr12;
-        
+        flex-direction: column;
+
+        @include for-mobile-layout {
+            flex-direction: row;
+            margin: 100px 0;
+        }
+
         .profile-img {
-            width: 200px;
-            height: 200px;
-            margin-right: 1rem;
+            width: 100%;
+            aspect-ratio: 4 / 4;
+            margin: 0 auto;
+
+            @include for-mobile-layout {
+                width: 200px;
+                height: 200px;
+                margin-right: 1rem;
+            }
         }
     }
 
     .user-info {
         padding: 1rem 0;
         flex-grow: 1;
+ 
+        .name-and-lvl {
+            flex-direction: column;
+            gap: 2rem;
+
+            @include for-mobile-layout {
+                gap: 1rem;
+            }
+
+            @include for-narrow-layout {
+                flex-direction: row;
+                align-items: center;
+            }
+        }
 
         .user-lvl {
             font-size: 1.5rem;
@@ -31,17 +57,36 @@
 
         .balance {
             display: inline-block;
-            margin-top: 3rem;
+            margin-top: 1.5rem;
             text-align: center;
+            display: none;
+
+            @include for-mobile-layout {
+             display: inline-block;
+            }
+
+            @include for-narrow-layout {
+                margin-top: 3rem;
+            }
         }
 
         h3 {
-            font-size: 1.5rem;
+            font-size: 1.25rem;
+            white-space: nowrap;
+
+            @include for-narrow-layout {
+                font-size: 1.5rem;
+            }
         }
     }
 
     .actions-section {
         gap: 3rem;
+        flex-direction: column-reverse;
+
+        @include for-midium-layout {
+            flex-direction: row;
+        }
 
         h4 {
             font-size: 1.5rem;
@@ -50,10 +95,10 @@
             padding-left: 1rem;
         }
 
-        .no-actions{
+        .no-actions {
             background-color: $clr12;
             height: 500px;
-            padding:2rem 1rem;
+            padding: 2rem 1rem;
         }
     }
 
@@ -61,40 +106,79 @@
         flex-grow: 1;
 
         .action-list {
-            min-height: 500px;
+            height: 500px;
             background-color: $clr12;
             padding: 1rem;
             gap: 1rem;
+            overflow-y: auto;
+           
+            &::-webkit-scrollbar {
+                width: 5px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: $clr12;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background: $clr11;
+            }
         }
     }
 
     .action-preview {
         padding: 1rem;
-        gap:1rem;
+        gap: 1rem;
         border-bottom: 2px solid $clr11;
         position: relative;
 
         img {
-            height: 100px;
-            width: 200px;
-        }
+            height: 75px;
+            width: 130px;
 
-            div {
-                position: absolute;
-                right: 1rem;
-                bottom: 1rem;
-                font-size: 0.9rem;
-                font-weight: lighter;
+            @include for-narrow-layout {
+                height: 100px;
+                width: 200px;
             }
         }
 
+        div {
+            position: absolute;
+            left: 162px;
+            bottom: 1rem;
+            font-size: 0.9rem;
+            font-weight: lighter;
+
+            @include for-narrow-layout {
+                right: 1rem;
+                left: auto;
+            }
+        }
+    }
+
     .more-options {
-        width: 30%;
-        div{
+        width: 100%;
+
+        @include for-midium-layout {
+            width: 30%;
+        }
+
+        div {
             gap: 2.5rem;
             background-color: $clr12;
             color: $clr11;
             padding: 2rem 1rem;
+            justify-content: space-between;
+            flex-direction: column;
+
+            @include for-mobile-layout {
+                flex-direction: row;
+                font-size: 0.9rem;
+            }
+
+            @include for-midium-layout {
+                flex-direction: column;
+            }
         }
     }
 }
